# gazebo_ros_magnetometer_sensor

./: CMakeLists.txt  package.xml
include/gazebo_ros_magnetometer/: gazebo_ros_magnetometer.h
launch/: gazebo.launch
src/: gazebo_ros_magnetometer.cpp  gazebo_ros_magnetometer_sensor.cpp
urdf/: magnetometer.urdf.xacro
