<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros_magnetometer</name>
  <version>0.0.0</version>
  <description>This package contains all dschubba specific gazebo files 
  and some custom sensor plugins. This is inspired from hector_gazebo_plugins.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="bierjou@gmail.com">bier</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- Dependencies needed to compile this package. -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
